# wanda-inventory-predictions

./: .gitignore  main.py  pyproject.toml
app/: app.py  db.py
app/repositories/: expense_repo.py  intelligence_repo.py  sales_repo.py
app/routes/: analytics.py  forecast.py  intelligence.py  recommendations.py
app/schemas/: intelligence_schema.py
app/services/forecasting/: data_prep.py  profit_prep.py  prophet_service.py
app/services/intelligence/: forecast_service.py  intelligence_service.py
app/services/recommendations/: insight_service.py
